test/cases/parser/Datatypes2.errors
src/Datatypes2.b:3:12: Syntax error (expected name)
