test/cases/parser/Datatypes2.b
module Datatypes2
interface {
  datatype 123;
}
